XCOMMONS-3249: Allow storing job status and logs in a shared location
* Refactor DefaultJobStatusStore to make it easier to replace the storage without having to re-implement everything.
* Add the possibility to get the path segments to JobStatusFolderResolver.
* Extend tests to cover the new code.