@@ -19,60 +19,44 @@
  */
 package org.xwiki.job.internal;
 
-import java.io.File;
-import java.util.Arrays;
+import java.io.IOException;
 import java.util.List;
-import java.util.Objects;
+import java.util.concurrent.ExecutorService;
 
-import javax.inject.Provider;
-
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Test;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
-import org.slf4j.Logger;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.ArgumentCaptor;
+import org.xwiki.cache.Cache;
+import org.xwiki.cache.CacheException;
 import org.xwiki.cache.CacheManager;
-import org.xwiki.cache.internal.MapCache;
-import org.xwiki.component.manager.ComponentManager;
 import org.xwiki.component.util.ReflectionUtils;
-import org.xwiki.job.AbstractJobStatus;
 import org.xwiki.job.DefaultJobStatus;
 import org.xwiki.job.DefaultRequest;
 import org.xwiki.job.JobManagerConfiguration;
-import org.xwiki.job.Request;
-import org.xwiki.job.annotation.Serializable;
 import org.xwiki.job.event.status.JobStatus;
-import org.xwiki.job.internal.xstream.SerializableXStreamChecker;
-import org.xwiki.job.test.SerializableStandaloneComponent;
-import org.xwiki.job.test.StandaloneComponent;
-import org.xwiki.job.test.UnserializableJobStatus;
-import org.xwiki.logging.LoggerManager;
-import org.xwiki.logging.event.LogEvent;
-import org.xwiki.logging.internal.tail.XStreamFileLoggerTail;
-import org.xwiki.logging.marker.TranslationMarker;
 import org.xwiki.logging.tail.LoggerTail;
-import org.xwiki.test.TestEnvironment;
-import org.xwiki.test.XWikiTempDirUtil;
+import org.xwiki.test.LogLevel;
 import org.xwiki.test.annotation.BeforeComponent;
-import org.xwiki.test.annotation.ComponentList;
+import org.xwiki.test.junit5.LogCaptureExtension;
 import org.xwiki.test.junit5.mockito.ComponentTest;
-import org.xwiki.test.junit5.mockito.InjectComponentManager;
 import org.xwiki.test.junit5.mockito.InjectMockComponents;
 import org.xwiki.test.junit5.mockito.MockComponent;
-import org.xwiki.test.mockito.MockitoComponentManager;
-import org.xwiki.xstream.internal.SafeXStream;
-import org.xwiki.xstream.internal.XStreamUtils;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.sameInstance;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
@@ -82,752 +66,220 @@ import static org.mockito.Mockito.when;
  * @version $Id$
  */
 @ComponentTest
-// @formatter:off
-@ComponentList({
-    SafeXStream.class,
-    XStreamUtils.class,
-    SerializableXStreamChecker.class,
-    JobStatusSerializer.class,
-    XStreamFileLoggerTail.class,
-    TestEnvironment.class,
-    // Add all components to ensure that the priority works as expected.
-    Version1JobStatusFolderResolver.class,
-    Version2JobStatusFolderResolver.class,
-    Version3JobStatusFolderResolver.class
-})
-// @formatter:on
 class DefaultJobStatusStoreTest
 {
-    private static final List<String> ID = Arrays.asList("test");
+    private static final List<String> ID = List.of("id1", "id2");
 
-    private static final String STATUS_XML_ZIP = "status.xml.zip";
+    private static final String ID_STRING = "id1/id2";
 
-    @Serializable
-    private static class SerializableCrossReferenceObject
-    {
-        public SerializableCrossReferenceObject field;
+    private static final String ERROR = "error";
 
-        public SerializableCrossReferenceObject()
-        {
-            this.field = this;
-        }
-    }
+    private static final String TYPE = "type";
 
-    @Serializable
-    private static class SerializableProvider implements Provider<String>
-    {
-        @Override
-        public String get()
-        {
-            return null;
-        }
-    }
-
-    private static class SerializableImplementationProvider implements Provider<String>, java.io.Serializable
-    {
-        private static final long serialVersionUID = 1L;
-
-        @Override
-        public String get()
-        {
-            return null;
-        }
-    }
-
-    @Serializable
-    private static class SerializableObjectTest
-    {
-        public Object field;
-
-        public SerializableObjectTest(Object field)
-        {
-            this.field = field;
-        }
-    }
-
-    @Serializable
-    private static class CustomSerializableObject
-    {
-        public String field;
-
-        public CustomSerializableObject(String field)
-        {
-            this.field = field;
-        }
-
-        @Override
-        public boolean equals(Object obj)
-        {
-            return Objects.equals(((CustomSerializableObject) obj).field, this.field);
-        }
-    }
-
-    @Serializable
-    private static class SerializableCustomObject
-    {
-        public String field;
-
-        public SerializableCustomObject(String field)
-        {
-            this.field = field;
-        }
-
-        @Override
-        public boolean equals(Object obj)
-        {
-            return Objects.equals(((SerializableCustomObject) obj).field, this.field);
-        }
-    }
-
-    @Serializable(false)
-    private static class NotSerializableCustomObject
-    {
-        public String field;
-
-        public NotSerializableCustomObject(String field)
-        {
-            this.field = field;
-        }
-
-        @Override
-        public boolean equals(Object obj)
-        {
-            return Objects.equals(((NotSerializableCustomObject) obj).field, this.field);
-        }
-
-        @Override
-        public String toString()
-        {
-            return this.field;
-        }
-    }
-
-    @SuppressWarnings("serial")
-    private static class TestException extends Exception
-    {
-        private Object custom;
-
-        public TestException(String message, Throwable cause, Object custom)
-        {
-            super(message, cause);
-
-            this.custom = custom;
-        }
-
-        public Object getCustom()
-        {
-            return this.custom;
-        }
-    }
+    @RegisterExtension
+    private final LogCaptureExtension logCapture = new LogCaptureExtension(LogLevel.WARN);
 
     @InjectMockComponents
     private DefaultJobStatusStore store;
 
-    @InjectComponentManager
-    private MockitoComponentManager componentManager;
-
     @MockComponent
-    private JobManagerConfiguration jobManagerConfiguration;
-
-    @MockComponent
-    private LoggerManager loggerManager;
+    private PersistentJobStatusStore persistentJobStatusStore;
 
     @MockComponent
     private CacheManager cacheManager;
 
-    private File storeDirectory;
+    @MockComponent
+    private JobManagerConfiguration configuration;
 
-    private File wrongDirectory;
-
-    private File wrongDirectory2;
-
-    private File correctDirectory;
-
-    private File wrongStatusInCorrectDirectory;
+    private Cache<JobStatus> cache;
 
     @BeforeComponent
     void before() throws Exception
     {
-        this.storeDirectory = XWikiTempDirUtil.createTemporaryDirectory();
-
-        FileUtils.copyDirectory(new File("src/test/resources/jobs/status/"), this.storeDirectory);
-
-        this.wrongDirectory = new File(this.storeDirectory, "wrong/location");
-        this.wrongDirectory2 = new File(this.storeDirectory, "wrong/location2");
-        this.correctDirectory = new File(this.storeDirectory, "3/correct/location");
-        assertTrue(this.wrongDirectory.isDirectory(), "Directory copied from resources doesn't exist.");
-
-        File mostRecentFile = new File(this.wrongDirectory, STATUS_XML_ZIP);
-        File oldestFile = new File(this.wrongDirectory2, STATUS_XML_ZIP);
-        File middleFile = new File(this.correctDirectory, "status.xml");
-        this.wrongStatusInCorrectDirectory = middleFile;
-
-        assertTrue(mostRecentFile.exists());
-        assertTrue(oldestFile.exists());
-        assertTrue(middleFile.exists());
-
-        assertTrue(mostRecentFile.setLastModified(System.currentTimeMillis()));
-        assertTrue(oldestFile.setLastModified(System.currentTimeMillis() - 4000));
-        assertTrue(middleFile.setLastModified(System.currentTimeMillis() - 2000));
-
-        when(this.jobManagerConfiguration.getStorage()).thenReturn(this.storeDirectory);
-        when(this.jobManagerConfiguration.getJobStatusCacheSize()).thenReturn(100);
-
-        when(this.cacheManager.createNewCache(any())).thenReturn(new MapCache<>());
-
-        when(this.loggerManager.createLoggerTail(any(), anyBoolean())).then(new Answer<LoggerTail>()
-        {
-            @Override
-            public LoggerTail answer(InvocationOnMock invocation) throws Throwable
-            {
-                XStreamFileLoggerTail loggerTail = componentManager.getInstance(XStreamFileLoggerTail.class);
-                loggerTail.initialize(invocation.getArgument(0), invocation.getArgument(1));
-
-                return loggerTail;
-            }
-        });
+        when(this.configuration.getJobStatusCacheSize()).thenReturn(100);
+        this.cache = mock();
+        doReturn(this.cache).when(this.cacheManager).createNewCache(any());
     }
 
-    private DefaultJobStatus<Request> createStatus()
+    @Test
+    void initializeWhenCacheCreationFails() throws CacheException
     {
-        return createStatus(true);
+        when(this.configuration.getJobStatusCacheSize()).thenReturn(100);
+        when(this.cacheManager.createNewCache(any())).thenThrow(new CacheException(ERROR));
+
+        assertThrows(Exception.class, () -> this.store.initialize());
     }
 
-    private DefaultJobStatus<Request> createStatus(boolean logtail)
+    @Test
+    void getJobStatusWhenCacheHit()
     {
-        DefaultRequest request = new DefaultRequest();
-        request.setId(ID);
+        JobStatus status = mock();
 
-        DefaultJobStatus<Request> status = new DefaultJobStatus<>("type", request, null, null, null);
+        when(this.cache.get(ID_STRING)).thenReturn(status);
 
-        if (logtail) {
-            status.setLoggerTail(this.store.createLoggerTail(ID, false));
-        }
+        assertThat(this.store.getJobStatus(ID), sameInstance(status));
 
-        return status;
+        verify(this.cache).get(ID_STRING);
+        verifyNoInteractions(this.persistentJobStatusStore);
     }
 
-    private <S extends JobStatus> S getStatus()
+    @Test
+    void getJobStatusWhenCacheMissThenLoadedAndCached() throws Exception
     {
-        return (S) this.store.getJobStatus(ID);
+        JobStatus status = mock();
+
+        when(this.cache.get(ID_STRING)).thenReturn(null);
+        when(this.persistentJobStatusStore.loadStatusWithLock(ID)).thenReturn(status);
+
+        assertThat(this.store.getJobStatus(ID), sameInstance(status));
+
+        verify(this.persistentJobStatusStore).loadStatusWithLock(ID);
+        verify(this.cache).set(ID_STRING, status);
     }
 
-    private <S extends JobStatus> S storeGet(S status) throws Exception
+    @Test
+    void getJobStatusWhenCacheMissThenSecondCheckAvoidsRead()
     {
-        if (status instanceof AbstractJobStatus) {
-            ((AbstractJobStatus) status).getLoggerTail().close();
-        }
+        JobStatus status = mock();
+
+        when(this.cache.get(ID_STRING)).thenReturn(null, status);
+
+        assertThat(this.store.getJobStatus(ID), sameInstance(status));
+
+        verify(this.cache, times(2)).get(ID_STRING);
+        verifyNoInteractions(this.persistentJobStatusStore);
+    }
+
+    @Test
+    void getJobStatusWhenLoadFailsRemovesCacheAndLogs() throws Exception
+    {
+        when(this.cache.get(ID_STRING)).thenReturn(null);
+        when(this.persistentJobStatusStore.loadStatusWithLock(ID)).thenThrow(new IOException(ERROR));
+
+        assertNull(this.store.getJobStatus(ID));
+
+        verify(this.cache).remove(ID_STRING);
+        assertEquals("Failed to load job status for id [id1, id2]", logCapture.getMessage(0));
+    }
+
+    @Test
+    void removeDelegatesAndEvictsCache() throws Exception
+    {
+        this.store.remove(ID);
+
+        verify(this.persistentJobStatusStore).removeWithLock(ID);
+        verify(this.cache).remove(ID_STRING);
+    }
+
+    @Test
+    void removeWhenPersistenceFailsKeepsCacheAndLogs() throws Exception
+    {
+        doThrow(new IOException(ERROR)).when(this.persistentJobStatusStore).removeWithLock(ID);
+
+        this.store.remove(ID);
+
+        verify(this.cache, never()).remove(ID_STRING);
+        assertEquals("Failed to remove job status for id [id1, id2]", logCapture.getMessage(0));
+    }
+
+    @Test
+    void storeWithNullStatusDoesNothing()
+    {
+        this.store.store(null);
+
+        verifyNoInteractions(this.cache);
+        verifyNoInteractions(this.persistentJobStatusStore);
+    }
+
+    @Test
+    void storeWithNullRequestDoesNothing()
+    {
+        JobStatus status = new DefaultJobStatus<>(TYPE, null, null, null, null);
 
         this.store.store(status);
 
-        this.store.flushCache();
-
-        return getStatus();
+        verifyNoInteractions(this.cache);
+        verifyNoInteractions(this.persistentJobStatusStore);
     }
 
     @Test
-    void jobStatusAndLogMoved()
+    void storeWithNullIdDoesNothing()
     {
-        JobStatus status = this.store.getJobStatus(List.of("correct", "location"));
-        assertNotNull(status);
-        LogEvent lastLogEvent = status.getLogTail().getLastLogEvent();
-        assertNotNull(lastLogEvent);
-        // Verify that we got the correct job.
-        assertEquals("Finished correct job of type [{}] with identifier [{}]", lastLogEvent.getMessage());
+        JobStatus status = new DefaultJobStatus<>(TYPE, new DefaultRequest(), null, null, null);
 
-        assertFalse(this.wrongDirectory.exists());
-        assertFalse(this.wrongDirectory.getParentFile().exists());
-        assertFalse(this.wrongDirectory2.exists());
-        assertFalse(this.wrongStatusInCorrectDirectory.exists());
-        assertTrue(new File(this.correctDirectory, STATUS_XML_ZIP).exists());
-        assertTrue(new File(this.correctDirectory, "log.index").exists());
-        assertTrue(new File(this.correctDirectory, "log.xml").exists());
+        this.store.store(status);
+
+        verifyNoInteractions(this.cache);
+        verifyNoInteractions(this.persistentJobStatusStore);
     }
 
     @Test
-    void getJobStatusWithNullId()
-    {
-        JobStatus jobStatus = this.store.getJobStatus(null);
-
-        assertNotNull(jobStatus);
-        assertNull(jobStatus.getRequest().getId());
-        assertEquals(JobStatus.State.FINISHED, jobStatus.getState());
-
-        assertSame(jobStatus, this.store.getJobStatus(null));
-    }
-
-    @Test
-    void getJobStatusWithMultipleId()
-    {
-        JobStatus jobStatus = this.store.getJobStatus(Arrays.asList("id1", "id2"));
-
-        assertNotNull(jobStatus);
-        assertEquals(Arrays.asList("id1", "id2"), jobStatus.getRequest().getId());
-        assertEquals(JobStatus.State.FINISHED, jobStatus.getState());
-
-        assertSame(jobStatus, this.store.getJobStatus(Arrays.asList("id1", "id2")));
-    }
-
-    @Test
-    void getJobStatusInOldPlace()
-    {
-        JobStatus jobStatus = this.store.getJobStatus(Arrays.asList("id1", "id2", "id3"));
-
-        assertNotNull(jobStatus);
-        assertEquals(Arrays.asList("id1", "id2", "id3"), jobStatus.getRequest().getId());
-        assertEquals(JobStatus.State.FINISHED, jobStatus.getState());
-    }
-
-    @Test
-    void getJobStatusInWrongPlaceAndWithInvalidLogArgument()
-    {
-        JobStatus jobStatus = this.store.getJobStatus(Arrays.asList("invalidlogargument"));
-
-        assertNotNull(jobStatus);
-        assertEquals(3, jobStatus.getLog().size());
-    }
-
-    @Test
-    void getJobStatusThatDoesNotExist()
-    {
-        JobStatus jobStatus = this.store.getJobStatus(Arrays.asList("nostatus"));
-
-        assertNull(jobStatus);
-
-        JobStatusSerializer mockSerializer = mock(JobStatusSerializer.class);
-        ReflectionUtils.setFieldValue(this.store, "serializer", mockSerializer);
-
-        jobStatus = this.store.getJobStatus(Arrays.asList("nostatus"));
-        assertNull(jobStatus);
-
-        verifyNoMoreInteractions(mockSerializer);
-    }
-
-    @Test
-    void removeJobStatus()
-    {
-        List<String> id = null;
-
-        JobStatus jobStatus = this.store.getJobStatus(id);
-
-        assertNotNull(jobStatus);
-        assertNull(jobStatus.getRequest().getId());
-        assertEquals(JobStatus.State.FINISHED, jobStatus.getState());
-
-        assertSame(jobStatus, this.store.getJobStatus(id));
-
-        this.store.remove(id);
-
-        assertSame(null, this.store.getJobStatus(id));
-    }
-
-    @Test
-    void removeNotExistingJobStatus()
-    {
-        this.store.remove(Arrays.asList("notexist"));
-    }
-
-    @Test
-    void storeNullJobStatus()
-    {
-        this.store.store(null);
-    }
-
-    @Test
-    void storeJobStatusWithNullRequest()
-    {
-        JobStatus jobStatus = new DefaultJobStatus("type", null, null, null, null);
-
-        this.store.store(jobStatus);
-    }
-
-    @Test
-    void storeJobStatusWithNullId()
-    {
-        JobStatus jobStatus = new DefaultJobStatus("type", new DefaultRequest(), null, null, null);
-
-        this.store.store(jobStatus);
-    }
-
-    @Test
-    void storeJobStatusWithBigId()
+    void storeSerializableSavesSynchronously() throws Exception
     {
         DefaultRequest request = new DefaultRequest();
-        request.setId(StringUtils.repeat('a', 768));
+        request.setId(ID);
+        request.setStatusSerialized(true);
 
-        JobStatus jobStatus = new DefaultJobStatus<>("type", request, null, null, null);
+        JobStatus status = new DefaultJobStatus<>(TYPE, request, null, null, null);
 
-        this.store.store(jobStatus);
+        this.store.store(status);
 
-        String longAName = StringUtils.repeat('a', 250);
-
-        assertTrue(new File(this.storeDirectory,
-            "3/%s/%s/%s/aaaaaaaaaaaaaaaaaa/status.xml.zip".formatted(longAName, longAName, longAName)).exists());
+        verify(this.cache).set(ID_STRING, status);
+        verify(this.persistentJobStatusStore).saveJobStatusWithLock(status);
     }
 
     @Test
-    void storeJobStatusWithNullPartInId()
+    void storeAsyncSerializableSchedulesSave() throws Exception
     {
-        DefaultRequest request = new DefaultRequest();
-        request.setId("first", null, "second");
-
-        JobStatus jobStatus = new DefaultJobStatus<>("type", request, null, null, null);
-
-        this.store.store(jobStatus);
-
-        assertTrue(new File(this.storeDirectory, "3/first/&null/second/status.xml.zip").exists());
-    }
-
-    @Test
-    void storeJobStatusWithProblematicCharacters()
-    {
-        DefaultRequest request = new DefaultRequest();
-        request.setId("..", ".", " .*.");
-
-        JobStatus jobStatus = new DefaultJobStatus<>("type", request, null, null, null);
-
-        this.store.store(jobStatus);
-
-        assertTrue(new File(this.storeDirectory, "3/%2E%2E/%2E/%20.%2A%2E/status.xml.zip").exists());
-    }
-
-    @Test
-    void storeUnserializableJobStatus()
-    {
-        List<String> id = Arrays.asList("test");
-        DefaultRequest request = new DefaultRequest();
-        request.setId(id);
-        JobStatus jobStatus = new UnserializableJobStatus("type", request, null, null, null);
-
-        this.store.store(jobStatus);
-
-        // Verify that the status hasn't been serialized, indirectly verifying that isSerializable() has been called and
-        // returned true.
-        assertFalse(new File(this.storeDirectory, "3/test/status.xml").exists());
-    }
-
-    @Test
-    void storeUnserializedJobStatus()
-    {
-        List<String> id = Arrays.asList("test");
-        DefaultRequest request = new DefaultRequest();
-        request.setId(id);
-        request.setStatusSerialized(false);
-        JobStatus jobStatus = new DefaultJobStatus("type", request, null, null, null);
-
-        this.store.store(jobStatus);
-
-        // Verify that the status hasn't been serialized, indirectly verifying that isSerializable() has been called and
-        // returned true.
-        assertFalse(new File(this.storeDirectory, "3/test/status.xml").exists());
-    }
-
-    @Test
-    void storeJobStatusWhenSerializable()
-    {
-        List<String> id = Arrays.asList("newstatus");
+        ExecutorService executor = mock();
+        ReflectionUtils.setFieldValue(this.store, "executorService", executor);
 
         DefaultRequest request = new DefaultRequest();
-        request.setId(id);
-        JobStatus jobStatus = new DefaultJobStatus("type", request, null, null, null);
+        request.setId(ID);
+        request.setStatusSerialized(true);
 
-        this.store.store(jobStatus);
+        JobStatus status = new DefaultJobStatus<>(TYPE, request, null, null, null);
 
-        assertSame(jobStatus, this.store.getJobStatus(id));
+        this.store.storeAsync(status);
 
-        // Verify that the status has been serialized, indirectly verifying that isSerializable() has been called and
-        // returned true.
-        assertTrue(new File(this.storeDirectory, "3/%s/status.xml.zip".formatted(id.get(0))).exists());
+        verify(this.cache).set(ID_STRING, status);
+
+        ArgumentCaptor<Runnable> runnableCaptor = ArgumentCaptor.captor();
+        verify(executor).execute(runnableCaptor.capture());
+
+        runnableCaptor.getValue().run();
+
+        verify(this.persistentJobStatusStore).saveJobStatusWithLock(status);
     }
 
     @Test
-    void serializeUnserializeWhenLogMessage() throws Exception
+    void storeSerializableWhenSaveFailsLogs() throws Exception
     {
-        DefaultJobStatus<Request> status = createStatus();
+        DefaultRequest request = new DefaultRequest();
+        request.setId(ID);
+        request.setStatusSerialized(true);
 
-        status.getLoggerTail().error("error message");
+        JobStatus status = new DefaultJobStatus<>(TYPE, request, null, null, null);
 
-        status = storeGet(status);
+        doThrow(new IOException(ERROR)).when(this.persistentJobStatusStore).saveJobStatusWithLock(status);
 
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
+        this.store.store(status);
+
+        assertEquals("Failed to save job status for id [id1, id2]", logCapture.getMessage(0));
     }
 
-    @Test
-    void serializeUnserializeWhenLogMarker() throws Exception
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void createLoggerTailDelegates(boolean readonly) throws Exception
     {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error(new TranslationMarker("translation.key"), "error message");
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(new TranslationMarker("translation.key"), status.getLog().peek().getMarker());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithException() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message",
-            new TestException("exception message", new Exception("cause"), "custom"));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals("exception message", status.getLog().peek().getThrowable().getMessage());
-        assertEquals("cause", status.getLog().peek().getThrowable().getCause().getMessage());
-        assertNull(((TestException) status.getLog().peek().getThrowable()).getCustom(), "exception message");
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithArguments() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", "arg1", "arg2");
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals("arg1", status.getLog().peek().getArgumentArray()[0]);
-        assertEquals("arg2", status.getLog().peek().getArgumentArray()[1]);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithNullArguments() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", "arg1", null, "arg3");
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals("arg1", status.getLog().peek().getArgumentArray()[0]);
-        assertNull(status.getLog().peek().getArgumentArray()[1]);
-        assertEquals("arg3", status.getLog().peek().getArgumentArray()[2]);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithComponentArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new DefaultJobStatusStore());
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(String.class, status.getLog().peek().getArgumentArray()[0].getClass());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithStandaloneComponentArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new StandaloneComponent());
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(String.class, status.getLog().peek().getArgumentArray()[0].getClass());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithSerializableStandaloneComponentArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableStandaloneComponent());
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(SerializableStandaloneComponent.class, status.getLog().peek().getArgumentArray()[0].getClass());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithCrossReference() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("message", new SerializableCrossReferenceObject());
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        SerializableCrossReferenceObject obj =
-            (SerializableCrossReferenceObject) status.getLog().peek().getArgumentArray()[0];
-        assertSame(obj, obj.field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithComponentField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(new DefaultJobStatusStore()));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertNull(((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithStandaloneComponentField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(new StandaloneComponent()));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertNull(((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithLoggerField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(mock(Logger.class)));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertNull(((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithProviderField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(mock(Provider.class)));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertNull(((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithComponentManagerField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(mock(ComponentManager.class)));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertNull(((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithSerializableProviderField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableObjectTest(new SerializableProvider()));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(SerializableProvider.class,
-            ((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field.getClass());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithSerializableImplementationProviderField() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message",
-            new SerializableObjectTest(new SerializableImplementationProvider()));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(SerializableImplementationProvider.class,
-            ((SerializableObjectTest) status.getLog().peek().getArgumentArray()[0]).field.getClass());
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithCustomObjectArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new CustomSerializableObject("value"));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(new CustomSerializableObject("value"), status.getLog().peek().getArgumentArray()[0]);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithSerializableCustomObjectArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new SerializableCustomObject("value"));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals(new SerializableCustomObject("value"), status.getLog().peek().getArgumentArray()[0]);
-    }
-
-    @Test
-    void serializeUnserializeWhenLogWithNotSerializableCustomObjectArgument() throws Exception
-    {
-        DefaultJobStatus<Request> status = createStatus();
-
-        status.getLoggerTail().error("error message", new NotSerializableCustomObject("value"));
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals("value", status.getLog().peek().getArgumentArray()[0]);
-    }
-
-    @Test
-    void serializeUnserializeWithLogQueue() throws Exception
-    {
-        JobStatus status = createStatus(false);
-
-        status.getLog().error("error message", "arg1", "arg2");
-
-        status = storeGet(status);
-
-        assertNotNull(status.getLog());
-        assertEquals("error message", status.getLog().peek().getMessage());
-        assertEquals("arg1", status.getLog().peek().getArgumentArray()[0]);
-        assertEquals("arg2", status.getLog().peek().getArgumentArray()[1]);
-    }
-
-    @Test
-    void createLoggerTailWithNullId()
-    {
-        assertNotNull(this.store.createLoggerTail(null, true));
+        LoggerTail loggerTail = mock();
+        when(this.persistentJobStatusStore.createLoggerTail(ID, readonly)).thenReturn(loggerTail);
+
+        try (LoggerTail actual = this.store.createLoggerTail(ID, readonly)) {
+            assertThat(actual, sameInstance(loggerTail));
+        }
+
+        verify(this.persistentJobStatusStore).createLoggerTail(ID, readonly);
+        verifyNoMoreInteractions(this.persistentJobStatusStore);
     }
 }
